--- a/terminals/alacritty.yml
+++ b/terminals/alacritty.yml
@@ -1,3 +1,11 @@
+font:
+  normal:
+    family: "JetBrainsMono Nerd Font"
+  bold:
+    family: "JetBrainsMono Nerd Font"
+  italic:
+    family: "JetBrainsMono Nerd Font"
+
 # TokyoNight Alacritty Colors
 colors:
   # Default colors
