--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,6 +64,6 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-usernamespa
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
 
 # vi: ft=bash
