feat(tmux): xterm keys

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 set -sg escape-time 10
 set -g default-terminal "${TERM}"
 set -ga terminal-overrides ",*256col*:Tc"
+set-window-option -g xterm-keys on
 
 # TokyoNight colors for Tmux
 
