feat(tmux): automatically renumber windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,6 +38,8 @@ setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscor
 set -g status-interval 5
 set -g automatic-rename on
 set -g automatic-rename-format '#{b:pane_current_path}'
+## Automatically renumber windows after closing a window
+set -g renumber-windows on
 ## Splitting
 bind-key '"' split-window -c '#{pane_current_path}'
 bind-key % split-window -h -c '#{pane_current_path}'
