--- a/terminals/alacritty.yml
+++ b/terminals/alacritty.yml
@@ -38,3 +38,5 @@ colors:
   indexed_colors:
     - { index: 16, color: '0xff9e64' }
     - { index: 17, color: '0xdb4b4b' }
+
+background_opacity: 0.95
