--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,7 +3,7 @@ name: Lint
 on: push
 
 jobs:
-  lint-shell:
+  shell:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -11,7 +11,7 @@ jobs:
       - name: Run Shellcheck
         uses: azohra/shell-linter@latest
 
-  lint-lua:
+  lua:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
