--- a/terminals/alacritty.yml
+++ b/terminals/alacritty.yml
@@ -36,8 +36,14 @@ colors:
     white:   '0xc0caf5'
 
   indexed_colors:
-    - { index: 16, color: '0xff9e64' }
-    - { index: 17, color: '0xdb4b4b' }
+    - {
+        index: 16,
+        color: '0xff9e64',
+      }
+    - {
+        index: 17,
+        color: '0xdb4b4b'
+      }
 
 window:
-  opacity: 0.95
+  opacity: 0.825
