feat(tmux): custom rename format

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,7 +37,7 @@ setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscor
 ## Automatically set window name to pane_current_path
 set -g status-interval 5
 set -g automatic-rename on
-set -g automatic-rename-format '#{b:pane_current_path}'
+set -g automatic-rename-format '#(~/.dotfiles/bin/tmux_automatic_rename_format)'
 ## Automatically renumber windows after closing a window
 set -g renumber-windows on
 ## Splitting
