✨(tmux): weather and uppercase meridiem

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,7 +25,7 @@ set -g status-left-style NONE
 set -g status-right-style NONE
 
 set -g status-left "#[fg=#15161E,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  #(TZ=America/Chicago date '+%%-I:%%M %%p')  #(~/.dotfiles/bin/countdown-days 2022-05-09) days  %-I:%M %p  #(spt playback --status || echo '🎵❌') #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#7aa2f7,bold] #h "
+set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] #(spt playback --status || echo '🎵❌')  %Y-%m-%d  #(curl 'https://wttr.in/Chicago?format=1' | sed 's/ //') #(TZ=America/Chicago date '+%%-I:%%M %%p' | tr '[:lower:]' '[:upper:]')  #(~/.dotfiles/bin/countdown-days 2022-05-09) days  #(curl 'https://wttr.in/London?format=1' | sed 's/ //') #(TZ=Europe/London date '+%%-I:%%M %%p' | tr '[:lower:]' '[:upper:]') #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#7aa2f7,bold] #h "
 
 setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
 setw -g window-status-separator ""
