🐛(tmux): window formatting

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,23 +37,21 @@ setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscor
 ## Automatically set window name to pane_current_path
 set -g status-interval 5
 set -g automatic-rename on
-set -g automatic-rename-format '#(~/.dotfiles/bin/tmux_automatic_rename_format)'
+set -g automatic-rename-format '#(~/.dotfiles/bin/tmux_automatic_rename_format #{pane_current_path} #{pane_current_command})'
 ## Automatically renumber windows after closing a window
 set -g renumber-windows on
 ## Splitting
-bind-key '"' split-window -c '#{pane_current_path}'
-bind-key % split-window -h -c '#{pane_current_path}'
 bind-key v split-window -h
+bind-key V split-window -h -c '#{pane_current_path}'
 bind-key s split-window -v
+bind-key S split-window -v -c '#{pane_current_path}'
 ## Moving
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-bind-key , select-window -p
-bind-key . select-window -n
-bind-key '<' swap-window -t -1\; select-window -t -1
-bind-key '>' swap-window -t +1\; select-window -t +1
+bind-key P swap-window -t -1\; select-window -t -1
+bind-key N swap-window -t +1\; select-window -t +1
 ## Naming
 bind-key r command-prompt 'rename-window %%'
 bind-key R command-prompt 'rename-session %%'
