💎(nvim|tmux): colours

--- a/terminals/alacritty.yml
+++ b/terminals/alacritty.yml
@@ -10,12 +10,14 @@ font:
 colors:
   # Default colors
   primary:
-    background: '0x1a1b26'
+    background: '0x24283b' # Storm
+    # background: '0x1a1b26' # Night
     foreground: '0xc0caf5'
 
   # Normal colors
   normal:
-    black:   '0x15161E'
+    black:   '0x1D202F' # Storm
+    # black:   '0x15161E' # Night
     red:     '0xf7768e'
     green:   '0x9ece6a'
     yellow:  '0xe0af68'
@@ -46,4 +48,4 @@ colors:
       }
 
 window:
-  opacity: 0.825
+  opacity: 0.9
