✨(tmux): add key bind for `alacritty-bg-toggle`

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,6 +60,12 @@ setw -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-usernamespace pbcopy"
 
+# Reload config
+bind-key r source-file "${HOME}/.config/tmux/tmux.conf" \; display-message "Config reloaded."
+
+# Change Alacritty BG opacity.
+bind-key b run "${HOME}/.dotfiles/bin/alacritty-bg-toggle"
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
