tmux mouse on, install clickup

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal "${TERM}"
 set -sg escape-time 10
 set-window-option -g xterm-keys on
+setw -g mouse on
 
 # TokyoNight "Storm" colors for Tmux
 
