--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,7 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -sg escape-time 10
 set-window-option -g xterm-keys on
+set-option -g focus-events on
 setw -g mouse on
 
 # TokyoNight "Storm" colors for Tmux
