--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "${TERM}"
+set -sg terminal-overrides ",*:RGB"
 set -sg escape-time 10
 set-window-option -g xterm-keys on
 set-option -g focus-events on
