--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,39 +1,39 @@
 set -g default-terminal "${TERM}"
-set -sg terminal-overrides ",*:RGB"
-set -sg escape-time 10
+set -sg terminal-overrides ',*:RGB'
+set -sg escape-time 0
 set-window-option -g xterm-keys on
 set-option -g focus-events on
 setw -g mouse on
 
 # TokyoNight "Storm" colors for Tmux
 
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+set -g mode-style 'fg=#7aa2f7,bg=#3b4261'
 
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-style 'fg=#7aa2f7,bg=#3b4261'
+set -g message-command-style 'fg=#7aa2f7,bg=#3b4261'
 
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
+set -g pane-border-style 'fg=#3b4261'
+set -g pane-active-border-style 'fg=#7aa2f7'
 
-set -g status "on"
-set -g status-justify "left"
+set -g status 'on'
+set -g status-justify 'left'
 
-set -g status-style "fg=#7aa2f7,bg=#1f2335"
+set -g status-style 'fg=#7aa2f7,bg=#1f2335'
 
-set -g status-left-length "100"
-set -g status-right-length "200"
+set -g status-left-length 100
+set -g status-right-length 200
 
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=#1D202F,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
+set -g status-left '#[fg=#1D202F,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]'
 set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] #(~/.dotfiles/bin/mpris-currently-playing || echo '🎵❌')  %Y-%m-%d  #(curl 'https://wttr.in/49341?format=1' | sed 's/ //') #(TZ=America/New_York date '+%%-I:%%M %%p' | tr '[:lower:]' '[:upper:]')  #(~/.dotfiles/bin/countdown-days 2022-09-02) days  #(curl 'https://wttr.in/London?format=1' | sed 's/ //') #(TZ=Europe/London date '+%%-I:%%M %%p' | tr '[:lower:]' '[:upper:]') #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1D202F,bg=#7aa2f7,bold] #h "
 
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
+setw -g window-status-activity-style 'underscore,fg=#a9b1d6,bg=#1f2335'
+setw -g window-status-separator ''
+setw -g window-status-style 'NONE,fg=#a9b1d6,bg=#1f2335'
+setw -g window-status-format '#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]'
 
 # Windows/panes/sessions
 ## Automatically set window name to pane_current_path
@@ -61,10 +61,10 @@ bind-key R command-prompt 'rename-session %%'
 # Copying
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-usernamespace pbcopy"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'reattach-to-usernamespace pbcopy'
 
 # Reload config
-bind-key r source-file "${HOME}/.config/tmux/tmux.conf" \; display-message "Config reloaded."
+bind-key r source-file "${HOME}/.config/tmux/tmux.conf" \; display-message 'Config reloaded.'
 
 # Change Alacritty BG opacity.
 bind-key b run "${HOME}/.dotfiles/bin/alacritty-bg-toggle"
@@ -73,6 +73,6 @@ bind-key b run "${HOME}/.dotfiles/bin/alacritty-bg-toggle"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 
-run '~/.config/tmux/plugins/tpm/tpm'
+run "${HOME}/.config/tmux/plugins/tpm/tpm"
 
 # vi: ft=bash
