feat(tmux): move status bar to top

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@ set-option -g focus-events on
 setw -g mouse on
 set-option -g set-titles on
 set-option -g set-titles-string "#{b:pane_current_path} #W"
+set-option -g status-position top
 
 # TokyoNight "Storm" colors for Tmux
 
