--- a/web/ngrok.yml
+++ b/web/ngrok.yml
@@ -1,8 +1,8 @@
----
 console_ui_color: transparent
 dns_resolver_ips:
-  - 1.1.1.1
-  - 8.8.8.8
+    - 1.1.1.1
+    - 8.8.8.8
 region: eu
 version: 2
 update_check: false
+authtoken: 2ZP2TD2m9zGDHdF4rpCXaGJ1FRZ_2gfEKjnRqmuUd337QUwvA
