--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,6 +37,8 @@ set-option -g status-position top
 # set -g automatic-rename-format '#(~/.dotfiles/bin/tmux_automatic_rename_format #{pane_current_path} #{pane_current_command})'
 ## Automatically renumber windows after closing a window
 # set -g renumber-windows on
+## Creating
+bind-key c new-window -a
 ## Splitting
 bind-key v split-window -h
 bind-key V split-window -h -c '#{pane_current_path}'
